--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <html>
   <head>
     <title>Appleton Drawing Club</title>
+    <link href="/public/main.css" rel="stylesheet">
   </head>
   <body>
     <h1><a href="/">Appleton Drawing Club</a></h1>
-    <nav>
-      <ul>
+    <nav class="mb-3">
+      <ul class="flex gap-3">
         <li><a href="/">Events</a></li>
         <li><a href="/modeling">For models</a></li>
       </ul>
     </nav>
-    <h2>Upcoming events</h2>
-    <ul>
-      <li><a href="#">Mixed Pose Life Drawing - Wed, 17 April 2024 - 7:00-9:00PM - The Photo Opp Studio</a></li>
-    </ul>
-    <h2>About</h2>
-    <p>The Appleton Drawing Club is a group of artists who meet regularly to draw from life. We welcome artists of all skill levels and backgrounds. We are dedicated to providing a safe and respectful environment for models and artists alike.</p>
-    <h2>Newsletter sign up</h2>
+    <section>
+      <h2>Events</h2>
+      <ul>
+        <li><a href="#">Mixed Pose Life Drawing - Wed, 17 April 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
+      </ul>
+    </section>
+    <section>
+      <h2>About</h2>
+      <p>The Appleton Drawing Club is a group of artists who meet regularly to draw from life. We welcome artists of all skill levels and backgrounds. We are dedicated to providing a safe and respectful environment for models and artists alike.</p>
+    </section>
   </body>
 </html>
