--- a/modeling/index.html
+++ b/modeling/index.html
@@ -1,16 +1,16 @@
 <html>
   <head>
     <title>Appleton Drawing Club</title>
+    <link href="/public/main.css" rel="stylesheet">
   </head>
   <body>
     <h1><a href="/">Appleton Drawing Club</a></h1>
-    <nav>
-      <ul>
+    <nav class="mb-3">
+      <ul class="flex gap-3">
         <li><a href="/">Events</a></li>
         <li><a href="/modeling">For models</a></li>
       </ul>
     </nav>
     <iframe class="airtable-embed" src="https://airtable.com/embed/appZ8b20NKIBuFhjp/pagyBYKR6NPwNFFMY/form" frameborder="0" onmousewheel="" width="100%" height="750" style="background: transparent; border: 1px solid #ccc;"></iframe>
-    <h2>Newsletter sign up</h2>
   </body>
 </html>
