--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <h1><a href="/">Appleton Drawing Club</a></h1>
     <nav class="mb-3">
       <ul class="flex gap-3">
-        <li><a href="/">Events</a></li>
+        <li><a href="">Events</a></li>
         <li><a href="/modeling">For models</a></li>
       </ul>
     </nav>
     <section>
       <h2>Events</h2>
       <ul>
-        <li><a href="#">Mixed Pose Life Drawing - Wed, 17 April 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
+        <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-867544457827">Mixed Pose Life Drawing - Wed, 17 April 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
       </ul>
     </section>
     <section>
