--- a/modeling/index.html
+++ b/modeling/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Appleton Drawing Club</title>
     <link href="/public/main.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <h1><a href="/">Appleton Drawing Club</a></h1>
