--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
       </ul>
     </nav>
     <section>
-      <h2>Events</h2>
+      <h2>Upcoming Events</h2>
+      <ul>
+        <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-904423634437">Mixed Pose Life Drawing - Wed, 29 May 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
+      </ul>
+    </section>
+    <section>
+      <h2>Past Events</h2>
       <ul>
         <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-867544457827">Mixed Pose Life Drawing - Wed, 17 April 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
       </ul>
