Add background color

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <h1><a href="/">Appleton Drawing Club</a></h1>
-    <nav class="mb-3">
-      <ul class="flex gap-3">
-        <li><a href="">Events</a></li>
-        <li><a href="/modeling">For models</a></li>
-      </ul>
-    </nav>
+    <header>
+      <h1><a href="/">Appleton Drawing Club</a></h1>
+      <nav class="mb-3">
+        <ul class="flex gap-3">
+          <li><a href="">Events</a></li>
+          <li><a href="/modeling">For models</a></li>
+        </ul>
+      </nav>
+    </header>
     <section>
       <h2>Upcoming Events</h2>
       <ul>
