Add newsletter and instagram link

--- a/index.html
+++ b/index.html
@@ -30,6 +30,25 @@
     <section>
       <h2>About</h2>
       <p>The Appleton Drawing Club is a group of artists who meet regularly to draw from life. We welcome artists of all skill levels and backgrounds. We are dedicated to providing a safe and respectful environment for models and artists alike.</p>
+      <p><a target="_blank" href="https://www.instagram.com/appletondrawingclub/">Follow Appleton Drawing Club on Instagram</a></p>
+    </section>
+    <section>
+      <h2>Newsletter</h2>
+      <p>Sign up for our newsletter to be notified about upcoming events and local drawing news.</p>
+      <form
+        action="https://buttondown.email/api/emails/embed-subscribe/appletondrawingclub"
+        method="post"
+        target="popupwindow"
+        onsubmit="window.open('https://buttondown.email/appletondrawingclub', 'popupwindow')"
+        class="embeddable-buttondown-form"
+      >
+        <div class="pb-3">
+          <label for="bd-email">Enter your email</label>
+          <input type="email" name="email" id="bd-email" />
+        </div>
+
+        <button type="submit">Subscribe</button>
+      </form>
     </section>
   </body>
 </html>
