--- a/modeling/index.html
+++ b/modeling/index.html
@@ -9,7 +9,7 @@
       <h1><a href="/">Appleton Drawing Club</a></h1>
       <nav class="mb-3">
         <ul class="flex gap-3">
-          <li><a href="">Events</a></li>
+          <li><a href="/">Events</a></li>
           <li><a href="/modeling">For models</a></li>
         </ul>
       </nav>
