--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul class="flex gap-3">
           <li><a href="">Events</a></li>
           <li><a href="/modeling">For models</a></li>
+          <li><a href="https://www.instagram.com/appletondrawingclub">Instagram</a></li>
         </ul>
       </nav>
     </header>
