--- a/index.html
+++ b/index.html
@@ -18,12 +18,22 @@
     <section>
       <h2>Upcoming Events</h2>
       <ul>
-        <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-927853052457">Mixed Pose Life Drawing - Wed, 24 July 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
+        <li class="block shadow">
+          <a class="block" href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-the-magic-circle-tickets-965335553627">
+            <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_auto,h_450,w_970/v1703199034/IMG_8034_ab2tov.jpg">
+            <div class="p-3 bg-white">
+              <h3>Mixed Pose Life Drawing (The Magic Circle)</h3>
+              <p>Wed, 14 August 2024<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Liz</p>
+              <button>$15 - Book here</button>
+            </div>
+          </a>
+        </li>
       </ul>
     </section>
     <section>
       <h2>Past Events</h2>
       <ul>
+        <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-927853052457">Mixed Pose Life Drawing - Wed, 24 July 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
         <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-904423634437">Mixed Pose Life Drawing - Wed, 29 May 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
         <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-867544457827">Mixed Pose Life Drawing - Wed, 17 April 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
       </ul>
