--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       <h2>Upcoming Events</h2>
       <ul>
         <li class="block shadow">
-          <a class="block" href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-the-magic-circle-tickets-965335553627">
-            <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_auto,h_450,w_970/v1703199034/IMG_8034_ab2tov.jpg">
+          <a class="block" target="_blank" href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-1006412696467">
+            <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_auto,h_450,w_970/v1725293285/IMG_0262_aaxson.jpg">
             <div class="p-3 bg-white">
-              <h3>Mixed Pose Life Drawing (The Magic Circle)</h3>
-              <p>Wed, 14 August 2024<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Liz</p>
+              <h3>Mixed Pose Life Drawing</h3>
+              <p>Wed, 18 September 2024<br>7:00-9:00PM<br>The Photo Opp Studio</p>
               <button>$15 - Book here</button>
             </div>
           </a>
@@ -33,6 +33,7 @@
     <section>
       <h2>Past Events</h2>
       <ul>
+        <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-the-magic-circle-tickets-965335553627">Mixed Pose Life Drawing - Wed, 14 August 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
         <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-927853052457">Mixed Pose Life Drawing - Wed, 24 July 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
         <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-904423634437">Mixed Pose Life Drawing - Wed, 29 May 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
         <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-867544457827">Mixed Pose Life Drawing - Wed, 17 April 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
