--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_auto,h_450,w_970/v1725293285/IMG_0262_aaxson.jpg">
             <div class="p-3 bg-white">
               <h3>Mixed Pose Life Drawing</h3>
-              <p>Wed, 18 September 2024<br>7:00-9:00PM<br>The Photo Opp Studio</p>
+              <p>Wed, 18 September 2024<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Sophia</p>
               <button>$15 - Book here</button>
             </div>
           </a>
