--- a/index.html
+++ b/index.html
@@ -21,13 +21,33 @@
     </header>
     <section>
       <h2>Upcoming Events</h2>
-      <ul>
+      <ul class="grid md:grid-cols-2 gap-4">
         <li class="block shadow">
-          <a class="block" target="_blank" href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-1006412696467">
-            <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_auto,h_450,w_970/v1725293285/IMG_0262_aaxson.jpg">
+          <a class="block" target="_blank" href="https://www.eventbrite.com/e/1028976776237?aff=oddtdtcreator">
+            <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1727284714/IMG_0327_xeu9bj.jpg">
             <div class="p-3 bg-white">
               <h3>Mixed Pose Life Drawing</h3>
-              <p>Wed, 18 September 2024<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Sophia</p>
+              <p>Wed, 9 October 2024<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Cory</p>
+              <button>$15 - Book here</button>
+            </div>
+          </a>
+        </li>
+        <li class="block shadow">
+          <a class="block" target="_blank" href="https://www.eventbrite.com/e/1028977678937?aff=oddtdtcreator">
+            <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1727289295/IMG_0309_l7lv9x.jpg">
+            <div class="p-3 bg-white">
+              <h3>Mixed Pose Life Drawing</h3>
+              <p>Wed, 13 November 2024<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Leah</p>
+              <button>$15 - Book here</button>
+            </div>
+          </a>
+        </li>
+        <li class="block shadow">
+          <a class="block" target="_blank" href="https://www.eventbrite.com/e/1028981921627?aff=oddtdtcreator">
+            <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1727289054/IMG_0329_bziqrq.jpg">
+            <div class="p-3 bg-white">
+              <h3>Mixed Pose Life Drawing</h3>
+              <p>Wed, 11 December 2024<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Roslyn</p>
               <button>$15 - Book here</button>
             </div>
           </a>
@@ -35,17 +55,8 @@
       </ul>
     </section>
     <section>
-      <h2>Past Events</h2>
-      <ul>
-        <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-the-magic-circle-tickets-965335553627">Mixed Pose Life Drawing - Wed, 14 August 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-        <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-927853052457">Mixed Pose Life Drawing - Wed, 24 July 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-        <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-904423634437">Mixed Pose Life Drawing - Wed, 29 May 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-        <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-867544457827">Mixed Pose Life Drawing - Wed, 17 April 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-      </ul>
-    </section>
-    <section>
-      <h2>About</h2>
-      <p>The Appleton Drawing Club is a group of artists who meet regularly to draw from life. We welcome artists of all skill levels and backgrounds. We are dedicated to providing a safe and respectful environment for models and artists alike.</p>
+      <h2>About Appleton Drawing Club</h2>
+      <p>Appleton Drawing Club is a group of artists who meet regularly to draw from life. We welcome artists of all skill levels and backgrounds. We are dedicated to providing a safe and respectful environment for models and artists alike.</p>
       <p><a target="_blank" href="https://www.instagram.com/appletondrawingclub/">Follow Appleton Drawing Club on Instagram</a></p>
     </section>
     <section>
@@ -65,6 +76,16 @@
 
         <button type="submit">Subscribe</button>
       </form>
+    </section>
+    <section>
+      <h2>Past Events</h2>
+      <ul>
+        <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-1006412696467">Mixed Pose Life Drawing - Wed, 18 September 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
+        <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-the-magic-circle-tickets-965335553627">Mixed Pose Life Drawing - Wed, 14 August 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
+        <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-927853052457">Mixed Pose Life Drawing - Wed, 24 July 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
+        <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-904423634437">Mixed Pose Life Drawing - Wed, 29 May 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
+        <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-867544457827">Mixed Pose Life Drawing - Wed, 17 April 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
+      </ul>
     </section>
   </body>
 </html>
