--- a/index.html
+++ b/index.html
@@ -23,16 +23,6 @@
       <h2>Upcoming Events</h2>
       <ul class="grid md:grid-cols-2 gap-4">
         <li class="block shadow">
-          <a class="block" target="_blank" href="https://www.eventbrite.com/e/1028977678937?aff=oddtdtcreator">
-            <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1727289295/IMG_0309_l7lv9x.jpg">
-            <div class="p-3 bg-white">
-              <h3>Mixed Pose Life Drawing</h3>
-              <p>Wed, 13 November 2024<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Leah</p>
-              <button>$15 - Book here</button>
-            </div>
-          </a>
-        </li>
-        <li class="block shadow">
           <a class="block" target="_blank" href="https://www.eventbrite.com/e/1028981921627?aff=oddtdtcreator">
             <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1727289054/IMG_0329_bziqrq.jpg">
             <div class="p-3 bg-white">
@@ -70,6 +60,7 @@
     <section>
       <h2>Past Events</h2>
       <ul>
+        <li><a href="https://www.eventbrite.com/e/1028981921627?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 13 November 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
         <li><a href="https://www.eventbrite.com/e/1028976776237?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 9 October 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
         <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-1006412696467">Mixed Pose Life Drawing - Wed, 18 September 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
         <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-the-magic-circle-tickets-965335553627">Mixed Pose Life Drawing - Wed, 14 August 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
