Try mini site builder

--- a/src/template.html
+++ b/src/template.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Appleton Drawing Club</title>
-    <link href="/public/main.css" rel="stylesheet">
+    <link href="/main.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Friendly, local life drawing in Appleton, WI">
     <meta name="keywords" content="Appleton Drawing Club, life drawing, figure drawing, drawing, art, Appleton, Wisconsin, Fox Cities, drawing club, artist, model, modeling, nude modeling, life model, figure model, art model, artist model, drawing model, Appleton Drawing Club, life drawing, figure drawing, drawing, art, Appleton, Wisconsin, Fox Cities, drawing club, artist, model, modeling, nude modeling, life model, figure model, art model, artist model, drawing model">
@@ -13,27 +13,17 @@
       <h1><a href="/">Appleton Drawing Club</a></h1>
       <nav class="mb-3">
         <ul class="flex gap-3">
-          <li><a href="">Events</a></li>
+          <li><a href="/">Events</a></li>
           <li><a href="/modeling">For models</a></li>
-          <li><a href="https://www.instagram.com/appletondrawingclub">Instagram</a></li>
+          <li><a target="_blank" href="https://www.instagram.com/appletondrawingclub">Instagram</a></li>
         </ul>
       </nav>
     </header>
+
     <section>
-      <h2>Upcoming Events</h2>
-      <ul class="grid md:grid-cols-2 gap-4">
-        <li class="block shadow">
-          <a class="block" target="_blank" href="https://www.eventbrite.com/e/1028981921627?aff=oddtdtcreator">
-            <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1727289054/IMG_0329_bziqrq.jpg">
-            <div class="p-3 bg-white">
-              <h3>Mixed Pose Life Drawing</h3>
-              <p>Wed, 11 December 2024<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Roslyn</p>
-              <button>$15 - Book here</button>
-            </div>
-          </a>
-        </li>
-      </ul>
+        {{ content }}
     </section>
+
     <section>
       <h2>About Appleton Drawing Club</h2>
       <p>Appleton Drawing Club is a group of artists who meet regularly to draw from life. We welcome artists of all skill levels and backgrounds. We are dedicated to providing a safe and respectful environment for models and artists alike.</p>
@@ -56,18 +46,6 @@
 
         <button type="submit">Subscribe</button>
       </form>
-    </section>
-    <section>
-      <h2>Past Events</h2>
-      <ul>
-        <li><a href="https://www.eventbrite.com/e/1028981921627?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 13 November 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-        <li><a href="https://www.eventbrite.com/e/1028976776237?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 9 October 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-        <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-1006412696467">Mixed Pose Life Drawing - Wed, 18 September 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-        <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-the-magic-circle-tickets-965335553627">Mixed Pose Life Drawing - Wed, 14 August 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-        <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-927853052457">Mixed Pose Life Drawing - Wed, 24 July 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-        <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-904423634437">Mixed Pose Life Drawing - Wed, 29 May 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-        <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-867544457827">Mixed Pose Life Drawing - Wed, 17 April 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-      </ul>
     </section>
   </body>
 </html>
