--- a/src/template.html
+++ b/src/template.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Appleton Drawing Club</title>
-    <link href="/main.css" rel="stylesheet">
+    <link href="/styles/main.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Friendly, local life drawing in Appleton, WI">
     <meta name="keywords" content="Appleton Drawing Club, life drawing, figure drawing, drawing, art, Appleton, Wisconsin, Fox Cities, drawing club, artist, model, modeling, nude modeling, life model, figure model, art model, artist model, drawing model, Appleton Drawing Club, life drawing, figure drawing, drawing, art, Appleton, Wisconsin, Fox Cities, drawing club, artist, model, modeling, nude modeling, life model, figure model, art model, artist model, drawing model">
