--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <h2>Upcoming Events</h2>
-<ul class="grid md:grid-cols-2 gap-4">
+<p>Winter 2025 schedule coming soon!</p>
+<!-- <ul class="grid md:grid-cols-2 gap-4">
   <li class="block shadow">
     <a class="block" target="_blank" href="https://www.eventbrite.com/e/1028981921627?aff=oddtdtcreator">
       <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1727289054/IMG_0329_bziqrq.jpg">
@@ -10,10 +11,11 @@
       </div>
     </a>
   </li>
-</ul>
+</ul> -->
 
 <h2>Past Events</h2>
 <ul>
+  <li><a href="https://www.eventbrite.com/e/1028981921627?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 11 December 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
   <li><a href="https://www.eventbrite.com/e/1028981921627?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 13 November 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
   <li><a href="https://www.eventbrite.com/e/1028976776237?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 9 October 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
   <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-1006412696467">Mixed Pose Life Drawing - Wed, 18 September 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
