Add winter 2025 schedule

--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,72 @@
 <h2>Upcoming Events</h2>
-<p>Winter 2025 schedule coming soon!</p>
-<!-- <ul class="grid md:grid-cols-2 gap-4">
-  <li class="block shadow">
-    <a class="block" target="_blank" href="https://www.eventbrite.com/e/1028981921627?aff=oddtdtcreator">
+<ul class="grid md:grid-cols-2 gap-4">
+  <li class="block shadow bg-white">
+    <a class="block" target="_blank" href="https://www.eventbrite.com/e/1122248317929?aff=oddtdtcreator">
       <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1727289054/IMG_0329_bziqrq.jpg">
-      <div class="p-3 bg-white">
+      <div class="p-3">
         <h3>Mixed Pose Life Drawing</h3>
-        <p>Wed, 11 December 2024<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Roslyn</p>
+        <p>Wed, 8 January 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Emma</p>
         <button>$15 - Book here</button>
       </div>
     </a>
   </li>
-</ul> -->
+
+  <li class="block shadow bg-white">
+    <a class="block" target="_blank" href="https://www.eventbrite.com/e/1122285779979?aff=oddtdtcreator">
+      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1734964970/IMG_3064_ww1t8k.jpg">
+      <div class="p-3">
+        <h3>Portrait Drawing</h3>
+        <p>Wed, 15 January 2025<br>7:00-9:00PM<br>FSM Art House<br>Model: Anna</p>
+        <button>FREE - RSVP here</button>
+      </div>
+    </a>
+  </li>
+
+  <li class="block shadow bg-white">
+    <a class="block" target="_blank" href="https://www.eventbrite.com/e/1122252761219?aff=oddtdtcreator">
+      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1727289295/IMG_0309_l7lv9x.jpg">
+      <div class="p-3">
+        <h3>Mixed Pose Life Drawing</h3>
+        <p>Wed, 12 February 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: TBD</p>
+        <button>$15 - Book here</button>
+      </div>
+    </a>
+  </li>
+
+  <li class="block shadow bg-white">
+    <a class="block" target="_blank" href="https://www.eventbrite.com/e/1122267425079?aff=oddtdtcreator">
+      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1734965100/IMG_0361_am91xg.jpg">
+      <div class="p-3">
+        <h3>WILDLIFE Drawing</h3>
+        <p>Wed, 26 February 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Kyle the Hawk</p>
+        <p>Fundraiser for Loon Rescue</p>
+        <button>$15 - Book here</button>
+      </div>
+    </a>
+  </li>
+
+  <li class="block shadow bg-white">
+    <a class="block" target="_blank" href="https://www.eventbrite.com/e/1122263172359?aff=oddtdtcreator">
+      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1727284714/IMG_0327_xeu9bj.jpg">
+      <div class="p-3">
+        <h3>Mixed Pose Life Drawing</h3>
+        <p>Wed, 12 March 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Jerimiah</p>
+        <button>$15 - Book here</button>
+      </div>
+    </a>
+  </li>
+
+  <li class="block shadow bg-white">
+    <a class="block" href="#">
+      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1730471148/IMG_0191_afzi3o.jpg">
+      <div class="p-3">
+        <h3>Coming Soon – To Be Announced</h3>
+        <p>Wed, 26 March 2025<br>7:00-9:00PM<br>The Photo Opp Studio</p>
+        <button>Coming Soon</button>
+      </div>
+    </a>
+  </li>
+</ul>
 
 <h2>Past Events</h2>
 <ul>
