--- a/src/template.html
+++ b/src/template.html
@@ -15,6 +15,7 @@
         <ul class="flex gap-3">
           <li><a href="/">Events</a></li>
           <li><a href="/modeling">For models</a></li>
+          <li><a href="/faq">FAQs</a></li>
           <li><a target="_blank" href="https://www.instagram.com/appletondrawingclub">Instagram</a></li>
         </ul>
       </nav>
@@ -53,6 +54,7 @@
         <ul class="flex gap-3">
           <li><a href="/">Events</a></li>
           <li><a href="/modeling">For models</a></li>
+          <li><a href="/faq">FAQs</a></li>
           <li><a href="/code-of-conduct">Code of conduct</a></li>
           <li><a target="_blank" href="https://www.instagram.com/appletondrawingclub">Instagram</a></li>
         </ul>
