--- a/src/pages/faq.html
+++ b/src/pages/faq.html
@@ -18,6 +18,32 @@
   Not at all! We welcome people of all skill levels and backgrounds. Whether you're a seasoned pro or have never drawn before, you're welcome to join us. If a workshop or session is geared toward a specific skill level, we'll make sure to note that in the event description.
 </p>
 
+<h2>What should I expect at a session?</h2>
+
+<p>
+  Session formats vary, and the event description will provide details about the model, poses, and any special themes or activities. In general, you can expect a relaxed, friendly, focused atmosphere where you can draw, paint, or create in the medium of your choice. You can expect to meet other artists, share your work, and enjoy a supportive and creative environment.
+</p>
+
+<p>
+  As an example, a standard figure drawing session will follow this format:
+</p>
+
+<ul class="bullet">
+  <li>Pre-session: find a spot and set up your materials!</li>
+  <li>Welcome and introduction</li>
+  <li>First set: Gesture warm-up poses (1-5 minutes)</li>
+  <li>Second set: Medium poses (10-15 minutes)</li>
+  <li>Third set: Longer poses (25-45 minutes)</li>
+  <li>Breaks every 20-30 minutes</li>
+  <li>Clean up and share your work!</li>
+</ul>
+
+<h2>What is the etiquette during a session?</h2>
+
+<p>
+  Our sessions have a <a href="/code-of-conduct">code of conduct</a> to ensure a safe and respectful environment for models and artists alike. Please review the code of conduct before attending a session.
+</p>
+
 <h2>What should I bring to a session?</h2>
 
 <p>
@@ -36,3 +62,14 @@
   Our regular sessions are uninstructed but we plan to offer workshops and classes in the future. Artists frequently help each other and share tips and techniques during the session.
 </p>
 
+<h2>Can I pay by cash?</h2>
+
+<p>
+  Yes, we accept cash at the door for sessions that require payment. However, we appreciate if you can pay online in advance via our website to help us plan the session. You can also RSVP online and select cash as a payment option ahead of time!
+</p>
+
+<h2>I'm interested in modeling, how can I get started?</h2>
+
+<p>
+  We're always looking for new models! Check out our <a href="/modeling">modeling page</a> for more information and to share your interest.
+</p>
