--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,6 @@
 <h2>Upcoming Events</h2>
 <ul class="grid md:grid-cols-2 gap-4">
   <li class="block shadow bg-white">
-    <a class="block" target="_blank" href="https://www.eventbrite.com/e/1122285779979?aff=oddtdtcreator">
-      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1734964970/IMG_3064_ww1t8k.jpg">
-      <div class="p-3">
-        <h3>Portrait Drawing</h3>
-        <p>Wed, 15 January 2025<br>7:00-9:00PM<br>FSM Art House<br>Model: Anna</p>
-        <button>FREE - RSVP here</button>
-      </div>
-    </a>
-  </li>
-
-  <li class="block shadow bg-white">
     <a class="block" target="_blank" href="https://www.eventbrite.com/e/1122252761219?aff=oddtdtcreator">
       <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1727289295/IMG_0309_l7lv9x.jpg">
       <div class="p-3">
@@ -59,6 +48,7 @@
 
 <h2>Past Events</h2>
 <ul>
+  <li><a href="https://www.eventbrite.com/e/1122285779979?aff=oddtdtcreator">Portrait Drawing - Wed, 15 January 2024<br>7:00-9:00PM - FSM Art House</a></li>
   <li><a href="https://www.eventbrite.com/e/1122248317929?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 8 January 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
   <li><a href="https://www.eventbrite.com/e/1028981921627?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 11 December 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
   <li><a href="https://www.eventbrite.com/e/1028981921627?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 13 November 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
