--- a/src/index.html
+++ b/src/index.html
@@ -24,12 +24,12 @@
   </li>
 
   <li class="block shadow bg-white">
-    <a class="block" href="#">
+    <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator">
       <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1730471148/IMG_0191_afzi3o.jpg">
       <div class="p-3">
-        <h3>Coming Soon – To Be Announced</h3>
-        <p>Wed, 26 March 2025<br>7:00-9:00PM<br>The Photo Opp Studio</p>
-        <button>Coming Soon</button>
+        <h3>Mixed Pose Life Drawing</h3>
+        <p>Wed, 26 March 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Nala</p>
+        <button>$15 - Book here</button>
       </div>
     </a>
   </li>
