--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,6 @@
 <h2>Upcoming Events</h2>
 <ul class="grid md:grid-cols-2 gap-4">
   <li class="block shadow bg-white">
-    <a class="block" target="_blank" href="https://www.eventbrite.com/e/1122267425079?aff=oddtdtcreator">
-      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1734965100/IMG_0361_am91xg.jpg">
-      <div class="p-3">
-        <h3>WILDLIFE Drawing</h3>
-        <p>Wed, 26 February 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Kyle the Hawk, Squall the Peregrine, Elphie the Merlin</p>
-        <p>Fundraiser for Loon Rescue</p>
-        <button>$15 - Book here</button>
-      </div>
-    </a>
-  </li>
-
-  <li class="block shadow bg-white">
     <a class="block" target="_blank" href="https://www.eventbrite.com/e/1122263172359?aff=oddtdtcreator">
       <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1727284714/IMG_0327_xeu9bj.jpg">
       <div class="p-3">
@@ -35,8 +23,11 @@
   </li>
 </ul>
 
+<h3>April events coming soon! Subscribe to our newsletter below to be notified when the schedule is available.</h3>
+
 <h2>Past Events</h2>
 <ul>
+  <li><a href="https://www.eventbrite.com/e/1122267425079?aff=oddtdtcreator">Wildlife Drawing - Wed, 26 February 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
   <li><a href="https://www.eventbrite.com/e/1122252761219?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 19 February 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
   <li><a href="https://www.eventbrite.com/e/1122285779979?aff=oddtdtcreator">Portrait Drawing - Wed, 15 January 2025<br>7:00-9:00PM - FSM Art House</a></li>
   <li><a href="https://www.eventbrite.com/e/1122248317929?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 8 January 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
