--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,71 @@
       </div>
     </a>
   </li>
+
+  <li class="block shadow bg-white">
+    <!-- <a class="block" target="_blank" href="#"> -->
+      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1727289295/IMG_0309_l7lv9x.jpg">
+      <div class="p-3">
+        <h3>Mixed Pose Life Drawing</h3>
+        <p>Wed, 9 April 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Habble</p>
+        <button>Tickets available soon</button>
+      </div>
+    <!-- </a> -->
+  </li>
+  <li class="block shadow bg-white">
+    <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742399179/IMG_0498_hjcuyv.jpg">
+      <div class="p-3">
+        <h3>Mixed Pose Portrait Drawing</h3>
+        <p>Special one year Appleton Drawing Club anniversary party!</p>
+        <p>Wed, 23 April 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Kelsie</p>
+        <button>Tickets available soon</button>
+      </div>
+    <!-- </a> -->
+  </li>
+  <li class="block shadow bg-white">
+    <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1703199175/IMG_7979_qmjxqx.jpg">
+      <div class="p-3">
+        <h3>Life Drawing with Movement</h3>
+        <p>Wed, 14 May 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Cat</p>
+        <button>Tickets available soon</button>
+      </div>
+    <!-- </a> -->
+  </li>
+  <li class="block shadow bg-white">
+    <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742399309/IMG_2309_git7ak.jpg">
+      <div class="p-3">
+        <h3>Mixed Pose Life Drawing</h3>
+        <p>Wed, 28 May 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Sophie</p>
+        <button>Tickets available soon</button>
+      </div>
+    <!-- </a> -->
+  </li>
+  <li class="block shadow bg-white">
+    <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1730471148/IMG_0191_afzi3o.jpg">
+      <div class="p-3">
+        <h3>To Be Announced</h3>
+        <p>Wed, 11 June 2025</p>
+        <button>Tickets available soon</button>
+      </div>
+    <!-- </a> -->
+  </li>
+  <li class="block shadow bg-white">
+    <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742399413/IMG_3675_oewd2t.jpg">
+      <div class="p-3">
+        <h3>Mixed Pose Life Drawing</h3>
+        <p>Wed, 25 June 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Nick</p>
+        <button>Tickets available soon</button>
+      </div>
+    <!-- </a> -->
+  </li>
 </ul>
 
-<h3>April events coming soon! Subscribe to our newsletter below to be notified when the schedule is available.</h3>
+<h3>Spring events coming soon! Subscribe to our newsletter below to be notified when tickets are available.</h3>
 
 <h2>Past Events</h2>
 <ul>
