--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742399179/IMG_0498_hjcuyv.jpg">
       <div class="p-3">
         <h3>Mixed Pose Portrait Drawing</h3>
-        <p>Special one year Appleton Drawing Club anniversary party!</p>
+        <p><strong>🌟 Special one year Appleton Drawing Club anniversary party! 🌟</strong></p>
         <p>Wed, 23 April 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Kelsie</p>
         <button>Tickets available soon</button>
       </div>
@@ -47,7 +47,7 @@
       <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742399309/IMG_2309_git7ak.jpg">
       <div class="p-3">
         <h3>Mixed Pose Life Drawing</h3>
-        <p>Wed, 28 May 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Sophie</p>
+        <p>Wed, 28 May 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Sophia</p>
         <button>Tickets available soon</button>
       </div>
     <!-- </a> -->
