--- a/src/index.html
+++ b/src/index.html
@@ -12,25 +12,27 @@
   </li>
 
   <li class="block shadow bg-white">
-    <!-- <a class="block" target="_blank" href="#"> -->
+    <a class="block" target="_blank" href="https://www.eventbrite.com/e/1294896533389?aff=oddtdtcreator">
       <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1727289295/IMG_0309_l7lv9x.jpg">
       <div class="p-3">
         <h3>Mixed Pose Life Drawing</h3>
         <p>Wed, 9 April 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Habble</p>
-        <button>Tickets available soon</button>
+        <p><em>2 for 1 tickets available! See promo at link below</em></p>
+        <button>$15 - Book here</button>
       </div>
-    <!-- </a> -->
+    </a>
   </li>
   <li class="block shadow bg-white">
-    <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+    <a class="block" target="_blank" href="https://www.eventbrite.com/e/1294900374879?aff=oddtdtcreator">
       <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742399179/IMG_0498_hjcuyv.jpg">
       <div class="p-3">
         <h3>Mixed Pose Portrait Drawing</h3>
-        <p><strong>🌟 Special one year Appleton Drawing Club anniversary party! 🌟</strong></p>
+        <p><strong>🌟 Special one year Appleton Drawing Club anniversary party 🌟 Snacks and drinks provided. Bring your favorite drawings from the past year!</strong></p>
         <p>Wed, 23 April 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Kelsie</p>
-        <button>Tickets available soon</button>
+        <p><em>2 for 1 tickets available! See promo at link below</em></p>
+        <button>$15 - Book here</button>
       </div>
-    <!-- </a> -->
+    </a>
   </li>
   <li class="block shadow bg-white">
     <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
