--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
     <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
       <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1703199175/IMG_7979_qmjxqx.jpg">
       <div class="p-3">
-        <h3>Life Drawing with Movement</h3>
+        <h3>Mixed Pose Life Drawing (Movement)</h3>
         <p>Wed, 14 May 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Cat</p>
         <button>Tickets available soon</button>
       </div>
