--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,17 @@
     <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
       <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1730471148/IMG_0191_afzi3o.jpg">
       <div class="p-3">
+        <h3>Expressive Charcoal Drawing Fundamentals</h3>
+        <p>Instructor: Kevin McGillivray</p>
+        <p>3 hour class. Details and date to be announced!</p>
+        <button>Registration available soon</button>
+      </div>
+    <!-- </a> -->
+  </li>
+  <li class="block shadow bg-white">
+    <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1725293285/IMG_0262_aaxson.jpg">
+      <div class="p-3">
         <h3>To Be Announced</h3>
         <p>Wed, 11 June 2025</p>
         <button>Tickets available soon</button>
@@ -76,7 +87,7 @@
   </li>
 </ul>
 
-<h2>Past Events</h2>
+<h2 class="pt-3">Past Events</h2>
 <ul>
   <li><a href="https://www.eventbrite.com/e/1122263172359?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 12 March 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
   <li><a href="https://www.eventbrite.com/e/1122267425079?aff=oddtdtcreator">Wildlife Drawing - Wed, 26 February 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
