--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
       <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742571427/IMG_4994_igqglq.jpg">
       <div class="p-3">
         <h3>Mixed Pose Life Drawing (April Flowers)</h3>
+        <p>Theme: flower crowns, bouquets, and figures</p>
         <p>Wed, 9 April 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Habble</p>
         <p><em>2 for 1 tickets available! See promo at link below</em></p>
         <button>$15 - Book here</button>
@@ -39,6 +40,7 @@
       <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742493735/IMG_0505_sshk4e.jpg">
       <div class="p-3">
         <h3>Mixed Pose Life Drawing (Movement)</h3>
+        <p>Theme: a movement-based session where our model will move through a repeated set of short poses – a rare opportunity to study the moving human form</p>
         <p>Wed, 14 May 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Cat</p>
         <button>Tickets available soon</button>
       </div>
