--- a/src/template.html
+++ b/src/template.html
@@ -16,7 +16,7 @@
           <li><a href="/">Events</a></li>
           <li><a href="/modeling">For models</a></li>
           <li><a href="/faq">FAQs</a></li>
-          <li><a target="_blank" href="https://www.instagram.com/appletondrawingclub">Instagram</a></li>
+          <li><a href="/about">About</a></li>
         </ul>
       </nav>
     </header>
@@ -51,12 +51,12 @@
 
     <footer>
       <nav class="mb-3">
-        <ul class="flex gap-3">
+        <ul class="md:flex gap-3">
           <li><a href="/">Events</a></li>
           <li><a href="/modeling">For models</a></li>
           <li><a href="/faq">FAQs</a></li>
           <li><a href="/code-of-conduct">Code of conduct</a></li>
-          <li><a target="_blank" href="https://www.instagram.com/appletondrawingclub">Instagram</a></li>
+          <li><a href="/about">About</a></li>
         </ul>
       </nav>
     </footer>
