--- a/src/template.html
+++ b/src/template.html
@@ -17,6 +17,7 @@
           <li><a href="/modeling">For models</a></li>
           <li><a href="/faq">FAQs</a></li>
           <li><a href="/about">About</a></li>
+          <li><a href="/contact">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -28,6 +29,7 @@
     <section>
       <h2>About Appleton Drawing Club</h2>
       <p>Appleton Drawing Club is a group of artists who meet regularly to draw from life. We welcome artists of all skill levels and backgrounds. We are dedicated to providing a safe and respectful environment for models and artists alike.</p>
+      <p><a href="/about">Read more about Appleton Drawing Club</a></p>
       <p><a target="_blank" href="https://www.instagram.com/appletondrawingclub/">Follow Appleton Drawing Club on Instagram</a></p>
     </section>
     <section>
@@ -57,6 +59,7 @@
           <li><a href="/faq">FAQs</a></li>
           <li><a href="/code-of-conduct">Code of conduct</a></li>
           <li><a href="/about">About</a></li>
+          <li><a href="/contact">Contact</a></li>
         </ul>
       </nav>
     </footer>
