--- a/src/index.html
+++ b/src/index.html
@@ -61,8 +61,9 @@
       <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1730471148/IMG_0191_afzi3o.jpg">
       <div class="p-3">
         <h3>Expressive Charcoal Drawing Fundamentals</h3>
+        <p>Wed, 4 June 2025<br>6:00-9:00PM<br>Richeson School of Art & Gallery</p>
         <p>Instructor: Kevin McGillivray</p>
-        <p>3 hour class. Details and date to be announced!</p>
+        <p>Details to be announced!</p>
         <button>Registration available soon</button>
       </div>
     <!-- </a> -->
