--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
       <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742399179/IMG_0498_hjcuyv.jpg">
       <div class="p-3">
         <h3>Mixed Pose Portrait Drawing (ADC Anniversary!)</h3>
-        <p><strong>🌟 Special one year Appleton Drawing Club anniversary party 🌟 Snacks and drinks provided. Bring your favorite drawings from the past year!</strong></p>
+        <p><strong>🌟 Special one year Appleton Drawing Club anniversary party 🌟 Snacks and drinks provided. Bring a friend and your favorite drawings from the past year!</strong></p>
         <p>Wed, 23 April 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Kelsie</p>
         <p><em>2 for 1 tickets available! See promo at link below</em></p>
         <button>$15 - Book here</button>
@@ -63,8 +63,13 @@
         <h3>Expressive Charcoal Drawing Fundamentals</h3>
         <p>Wed, 4 June 2025<br>6:00-9:00PM<br>Richeson School of Art & Gallery</p>
         <p>Instructor: Kevin McGillivray</p>
-        <p>Details to be announced!</p>
-        <button>Registration available soon</button>
+        <p>Details to be announced! Enter your email to be notified about updates and registration for this class.</p>
+        <form name="charcoal-class" netlify>
+          <p>
+            <label>Email <input type="email" name="email" /></label>
+          </p>
+          <button type="submit">Notify me</button>
+        </form>
       </div>
     <!-- </a> -->
   </li>
