--- a/src/pages/faq.html
+++ b/src/pages/faq.html
@@ -47,7 +47,7 @@
 <h2>What should I bring to a session?</h2>
 
 <p>
-  Bring any of your preferred art supplies. This could be a sketchbook and pencils, charcoal, pastels, or whatever you like to use. If you're new to drawing, a simple sketchbook and a few pencils are a great place to start. We often have basic drawing paper and pencils available at the session if you need some, but it's a good idea to bring your own. Soon we also hope to provide plenty of large easels, but for now we recommend bringing you bring your own easel or drawing board.
+  Bring any of your preferred art supplies. This could be a sketchbook and pencils, charcoal, pastels, or whatever you like to use. If you're new to drawing, a simple sketchbook and a few pencils are a great place to start. We often have basic drawing paper and pencils available at the session if you need some, but it's a good idea to bring your own. Soon we also hope to provide plenty of large easels, but for now we recommend bringing your own easel or drawing board.
 </p>
 
 <h2>Can I use other media like oil, watercolors, or digital tools?</h2>
