--- a/src/index.html
+++ b/src/index.html
@@ -36,15 +36,16 @@
     </a>
   </li>
   <li class="block shadow bg-white">
-    <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+    <a class="block" target="_blank" href="https://www.eventbrite.com/e/figure-drawing-with-appleton-drawing-club-movement-tickets-1298049273319?aff=oddtdtcreator">
       <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742493735/IMG_0505_sshk4e.jpg">
       <div class="p-3">
         <h3>Mixed Pose Life Drawing (Movement)</h3>
         <p>Theme: a movement-based session where our model will move through a repeated set of short poses – a rare opportunity to study the moving human form</p>
         <p>Wed, 14 May 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Cat</p>
-        <button>Tickets available soon</button>
+        <p><em>2 for 1 tickets available! See promo at link below</em></p>
+        <button>$15 - Book here</button>
       </div>
-    <!-- </a> -->
+    </a>
   </li>
   <li class="block shadow bg-white">
     <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
