--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
       <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1727289295/IMG_0309_l7lv9x.jpg">
       <div class="p-3">
         <h3>Mixed Pose Life Drawing</h3>
-        <p>Wed, 26 March 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Nala</p>
+        <p>Wed, 26 March 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Liz</p>
         <button>$15 - Book here</button>
       </div>
     </a>
