--- a/src/pages/code-of-conduct.html
+++ b/src/pages/code-of-conduct.html
@@ -6,10 +6,10 @@
   <li>Arrive on time and be ready to start at the scheduled time.</li>
   <li>If arriving late, enter quietly and without disrupting others.</li>
   <li>Keep talking and noise to a minimum during the pose to ensure a calm and productive atmosphere. Breaks and before or after the session are great times for catching up!</li>
-  <li>Follow the session schedule, including breaks, to ensure the model remains comfortable.</li>
+  <li>Follow the session schedule, including breaks, to ensure the model remains comfortable. Be fully engaged in drawing or painting while the model is posing. If you need to take an extended break, leave the model room and return when you're ready to continue.</li>
   <li>Position yourself where you won’t block others’ view of the model.</li>
   <li>Do not critique others' art or the model's work unless asked for feedback.</li>
-  <li>ALWAYS respect the model's personal space and body. Do not touch the model. Do not talk to the model while they are posing.</li>
+  <li>ALWAYS respect the model's personal space and body. Do not touch the model. Do not talk to the model while they are posing. Do not enter the model's space unless specifically requested by the model.</li>
   <li>Do not take photos or videos of the model or session without prior written permission from the event organizer and the model.</li>
   <li>Do not make comments about the model's body (positive or negative). Feedback about poses should be shared with the session organizer, not with the model directly.</li>
   <li>Do not ask the model out on a date.</li>
