Make form input required

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
         <p>Details to be announced! Enter your email to be notified about updates and registration for this class.</p>
         <form name="charcoal-class" netlify>
           <p>
-            <label>Email <input type="email" name="email" /></label>
+            <label>Email <input type="email" name="email" required /></label>
           </p>
           <button type="submit">Notify me</button>
         </form>
