--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,6 @@
 <h2>Upcoming Events</h2>
 <ul class="grid md:grid-cols-2 gap-4">
   <li class="block shadow bg-white">
-    <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator">
-      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1727289295/IMG_0309_l7lv9x.jpg">
-      <div class="p-3">
-        <h3>Mixed Pose Life Drawing</h3>
-        <p>Wed, 26 March 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Liz</p>
-        <button>$15 - Book here</button>
-      </div>
-    </a>
-  </li>
-
-  <li class="block shadow bg-white">
     <a class="block" target="_blank" href="https://www.eventbrite.com/e/1294896533389?aff=oddtdtcreator">
       <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742571427/IMG_4994_igqglq.jpg">
       <div class="p-3">
@@ -76,10 +65,11 @@
   </li>
   <li class="block shadow bg-white">
     <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
-      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1725293285/IMG_0262_aaxson.jpg">
+      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1717362443/Mask_group_np1r8d.jpg">
       <div class="p-3">
-        <h3>To Be Announced</h3>
-        <p>Wed, 11 June 2025</p>
+        <h3>FIELD TRIP: Garden Sketching at the Paine</h3>
+        <p>Wed, 18 June 2025<br>6:00-8:00PM<br><a href="https://www.thepaine.org" target="_blank">Paine Art Center and Gardens</a></p>
+        <p>Details to be announced!</p>
         <button>Tickets available soon</button>
       </div>
     <!-- </a> -->
@@ -98,6 +88,7 @@
 
 <h2 class="pt-3">Past Events</h2>
 <ul>
+  <li><a href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 26 March 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
   <li><a href="https://www.eventbrite.com/e/1122263172359?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 12 March 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
   <li><a href="https://www.eventbrite.com/e/1122267425079?aff=oddtdtcreator">Wildlife Drawing - Wed, 26 February 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
   <li><a href="https://www.eventbrite.com/e/1122252761219?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 19 February 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
