Add post system and anniversary post

--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,6 @@
 <h2>Upcoming Events</h2>
 <ul class="grid md:grid-cols-2 gap-4">
   <li class="block shadow bg-white">
-    <a class="block" target="_blank" href="https://www.eventbrite.com/e/1294896533389?aff=oddtdtcreator">
-      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742571427/IMG_4994_igqglq.jpg">
-      <div class="p-3">
-        <h3>Mixed Pose Life Drawing (April Flowers)</h3>
-        <p>Theme: flower crowns, bouquets, and figures</p>
-        <p>Wed, 9 April 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Habble</p>
-        <p><em>2 for 1 tickets available! See promo at link below</em></p>
-        <button>$15 - Book here</button>
-      </div>
-    </a>
-  </li>
-  <li class="block shadow bg-white">
     <a class="block" target="_blank" href="https://www.eventbrite.com/e/1294900374879?aff=oddtdtcreator">
       <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742399179/IMG_0498_hjcuyv.jpg">
       <div class="p-3">
@@ -86,20 +74,16 @@
   </li>
 </ul>
 
-<h2 class="pt-3">Past Events</h2>
-<ul>
-  <li><a href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 26 March 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/1122263172359?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 12 March 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/1122267425079?aff=oddtdtcreator">Wildlife Drawing - Wed, 26 February 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/1122252761219?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 19 February 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/1122285779979?aff=oddtdtcreator">Portrait Drawing - Wed, 15 January 2025<br>7:00-9:00PM - FSM Art House</a></li>
-  <li><a href="https://www.eventbrite.com/e/1122248317929?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 8 January 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/1028981921627?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 11 December 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/1028981921627?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 13 November 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/1028976776237?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 9 October 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-1006412696467">Mixed Pose Life Drawing - Wed, 18 September 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-the-magic-circle-tickets-965335553627">Mixed Pose Life Drawing - Wed, 14 August 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-927853052457">Mixed Pose Life Drawing - Wed, 24 July 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-904423634437">Mixed Pose Life Drawing - Wed, 29 May 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-867544457827">Mixed Pose Life Drawing - Wed, 17 April 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
+<h2 class="pt-3">Blog posts & inspiration</h2>
+
+<ul class="grid md:grid-cols-1 gap-4">
+  <li class="block shadow bg-white">
+    <a class="block" href="/posts/2025-04-12-celebrating-one-year">
+      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_350,w_750/v1742585378/250226_ADCWildlifeDrawing_M4W_012_teyyz9.jpg" alt="Wildlife Drawing" />
+      <div class="p-3">
+        <h3>Celebrating One Year of Appleton Drawing Club</h3>
+        <p>By Kevin McGillivray • April 12, 2025</p>
+      </div>
+    </a>
+  </li>
 </ul>
