--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -1,3 +1,6 @@
+title: About
+----
+
 <h1 class="text-6xl text-center mb-4">A friendly, local life drawing community</h1>
 
 <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/v1742585378/250226_ADCWildlifeDrawing_M4W_012_teyyz9.jpg" alt="Wildlife Drawing" class="block mb-2" />
