--- a/src/pages/code-of-conduct.html
+++ b/src/pages/code-of-conduct.html
@@ -1,3 +1,6 @@
+title: Life Drawing Code of Conduct
+----
+
 <h1>Life Drawing Code of Conduct</h1>
 
 <p>Appleton Drawing Club is dedicated to providing a safe and respectful environment for models and artists alike. We expect all participants to adhere to the following code of conduct:</p>
