--- a/src/template.html
+++ b/src/template.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Appleton Drawing Club</title>
+    <title>{{ title }} | Appleton Drawing Club</title>
     <link href="/styles/main.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Friendly, local life drawing in Appleton, WI">
